# autoplaytest

./: .env.example  .gitignore  AI_PROVIDERS_README.md  CLAUDE.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SOLUTION_SUMMARY.md  CONFIG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FIXES_SUMMARY.md  INSTALLATION_FIXED.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  REQUIREMENTS.md  TERRAFORM.md  TEST_SUITE_SUMMARY.md  TODO.md  TROUBLESHOOTING.md  VIRTUAL_ENV_SETUP.md  add_shutdown_methods.py  api_server.py  complete_setup_unix.sh  complete_setup_windows.bat  complete_setup_windows.ps1  comprehensive_fix.bat  demo.bat  demo.py  demo.sh  demo_ai_generation.py  demo_clean.py  demo_mock.py  demo_setup.bat  docker-compose.yml  enhanced_setup_fixed.bat  (+38 more)
.github/workflows/: ci.yml
config/: config.yaml
config/ai_providers/: claude.yaml  gemini.yaml  gpt.yaml
config/prompts/claude/: page_analysis.md  system_prompt.md  test_generation.md
config/prompts/gemini/: system_prompt.md
config/prompts/gpt/: system_prompt.md  test_generation.md
docs/: DEMO_SITES_TEST_SUMMARY.md  FIXES_AND_IMPROVEMENTS.md  SESSION_MANAGEMENT_SOLUTION.md  session_management.md
examples/: session_management_demo.py  simple_login_test.py  test_saucedemo.py
generated_tests/: test_navigation_001.py
generated_tests_clean/: generation_config.json  run_tests.py  script_manifest.json  test_login_000.py
src/: __init__.py  simple_runner.py
src/ai/: intelligent_page_analyzer.py  pattern_analyzer.py  test_generator.py
src/ai/providers/: __init__.py  base_provider.py  claude_provider.py  gemini_provider.py  gpt_provider.py  provider_factory.py
src/core/engine/: main_engine.py
src/core/executor/: session_aware_executor.py  simple_test_runner.py  test_executor.py
src/core/script_generator/: ai_script_generator.py
src/core/session/: __init__.py  session_manager.py
src/monitoring/errors/: error_detector.py
src/monitoring/performance/: performance_monitor.py
src/reporting/generators/: report_generator.py
src/utils/: asyncio_cleanup.py  config_manager.py  database.py  logger.py  mock_generator.py
terraform/: README.md  api_gateway.tf  build_lambda_layers.sh  cloudwatch.tf  deploy.sh  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  package_lambdas.sh  s3.tf  secrets.tf  sqs.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/lambda_functions/: api_handler.py  test_executor_handler.py
tests/: conftest.py
tests/integration/: test_end_to_end_workflow.py  test_script_generator_integration.py
tests/unit/: test_base_provider.py  test_claude_provider.py  test_database_manager.py  test_error_detector.py  test_executor_monitoring.py  test_gpt_provider.py  test_intelligent_page_analyzer.py  test_pattern_analyzer.py  test_performance_monitor.py  test_provider_factory.py  test_session_manager.py
